--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "import-sort-parser-typescript4",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "An import-sort parser based on the TypeScript parser.",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -13,7 +13,7 @@
     "lint": "eslint --ext ts src"
   },
   "author": "Renke Grunwald <renke@renke.org> (https://github.com/renke)",
-  "repository": "renke/import-sort",
+  "repository": "supernotes/import-sort-parser-typescript4",
   "license": "ISC",
   "files": [
     "lib"
